# cvdp_explorer

./: .gitignore  .gitmodules  GUIDELINES.md  README.md  SPECIFICATION_AND_DEVELOPMENT_PLAN.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  deploy.yml
data/scripts/: process_cvdp.py  requirements.txt
data/scripts/tests/: test_process_cvdp.py
docs/: ARCHITECTURE.md  CVDP_BENCHMARK_INTERNALS.md  DATA_PIPELINE.md  DEPLOYMENT.md  FRONTEND.md  README.md  SPECIFICATION_AND_DEVELOPMENT_PLAN.md  TESTING_AND_CI.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: robots.txt  sitemap.xml
frontend/src/: App.test.tsx  App.tsx  main.tsx  styles.css
frontend/src/lib/: badges.test.ts  badges.ts  benchmarkGuide.test.ts  benchmarkGuide.ts  categories.test.ts  categories.ts  explorer.test.ts  explorer.ts  hierarchy.test.ts  hierarchy.ts  promptMarkdown.test.ts  promptMarkdown.ts  useDebouncedValue.test.ts  useDebouncedValue.ts
reference/paper/: Comprehensive_Verilog_Design_Problems_2506.14074v1_md.md
